spec/grammar/kndl.ebnf
(* ================================================================ *)
(* KNDL — Knowledge Node Description Language                      *)
(* EBNF Grammar v0.2.0 — derived from SPECIFICATION.md §2, §11, §13 *)
(* Notation: UPPERCASE = lexical non-terminal, 'x' = literal token  *)
(* ================================================================ *)


(* ── Program ──────────────────────────────────────────────────── *)

program        = { top_level_decl } ;

top_level_decl = node_decl
               | edge_decl
               | type_decl
               | context_decl
               | intent_decl
               | process_decl
               | query_decl
               | import_decl
               | export_decl
               | COMMENT ;


(* ── Nodes ────────────────────────────────────────────────────── *)

node_decl      = 'node' node_ref '::' type_expr '{' { node_member } '}' ;
node_member    = field_assign | inline_edge | meta_annotation ;
field_assign   = IDENTIFIER '=' expression ;
inline_edge    = IDENTIFIER '->' node_ref ;


(* ── Edges ────────────────────────────────────────────────────── *)

edge_decl      = 'edge' node_ref edge_op target_spec
                 [ '{' { edge_member } '}' ] ;
edge_op        = '->'
               | '<->'
               | '-[' IDENTIFIER ']->'
               | '<-[' IDENTIFIER ']-'
               | '-[' IDENTIFIER ']-' ;
target_spec    = node_ref
               | '[' node_ref { ',' node_ref } ']' ;
edge_member    = field_assign | meta_annotation ;


(* ── Types ────────────────────────────────────────────────────── *)

type_decl      = 'type' IDENTIFIER [ type_params ]
                 [ '=' type_expr ]
                 [ '{' { field_decl } '}' ]
                 [ 'where' '{' { constraint } '}' ] ;

type_params    = '<' type_param { ',' type_param } '>' ;
type_param     = IDENTIFIER [ '::' type_expr ] ;

type_expr      = IDENTIFIER [ '<' type_arg { ',' type_arg } '>' ]
               | type_expr '&' type_expr
               | type_expr '|' type_expr
               | STRING_LITERAL
               | type_expr '?'
               | '{' { field_decl } '}' ;
type_arg       = type_expr | node_ref | literal ;

field_decl     = IDENTIFIER ':' type_expr ;
constraint     = expression ;


(* ── Contexts ─────────────────────────────────────────────────── *)

context_decl   = 'context' node_ref '{' { context_member } '}' ;
context_member = meta_annotation
               | node_decl
               | edge_decl
               | intent_decl
               | process_decl
               | context_decl ;


(* ── Intents ──────────────────────────────────────────────────── *)

intent_decl    = 'intent' node_ref '::' type_expr '{'
                 trigger_clause
                 do_clause
                 { meta_annotation }
                 '}' ;

trigger_clause = 'trigger' '=' trigger_expr ;
trigger_expr   = query_decl
               | expression
               | 'cron' STRING_LITERAL ;

do_clause      = 'do' '{' { action } '}' ;
action         = 'emit' node_decl
               | 'emit' 'update' node_ref '{' { node_member } '}'
               | 'emit' 'delete' node_ref
               | 'goto' IDENTIFIER ;


(* ── Processes (new in v0.2) ─────────────────────────────────── *)

process_decl   = 'process' node_ref '::' type_expr '{'
                 { process_member }
                 '}' ;
process_member = state_decl | transition_decl | meta_annotation ;

state_decl     = 'state' IDENTIFIER
                 [ '{' { meta_annotation } '}' ] ;

transition_decl = 'on' event_expr 'in' IDENTIFIER '->' IDENTIFIER
                  [ 'where' expression ]
                  [ 'do' '{' { action } '}' ]
                  [ 'compensate' '{' { action } '}' ] ;

event_expr     = IDENTIFIER | query_decl ;


(* ── Queries ──────────────────────────────────────────────────── *)

query_decl     = 'query' [ IDENTIFIER ] '{'
                 { match_clause }
                 [ where_clause ]
                 [ group_clause ]
                 return_clause
                 '}' ;

match_clause   = [ 'optional' ] 'match' path_pattern ;

path_pattern   = [ VAR_BIND '=' ] step { edge_step step } ;
step           = VAR_BIND '::' type_expr
               | node_ref ;

edge_step      = edge_op
               | '-[' edge_type [ repetition ] ']->'
               | '<-[' edge_type [ repetition ] ']-'
               | '-[' edge_type [ repetition ] ']-' ;
edge_type      = IDENTIFIER | VAR_BIND ;
repetition     = '*' INT_LITERAL
               | '*' INT_LITERAL '..' INT_LITERAL
               | '*' '..' INT_LITERAL
               | '*' ;

where_clause   = 'where' expression ;
group_clause   = 'group' 'by' expression { ',' expression } ;

return_clause  = 'return' return_expr ;
return_expr    = expression [ 'with' 'edges' INT_LITERAL ]
               | map_literal
               | agg_field { ',' agg_field } ;
agg_field      = IDENTIFIER '=' agg_func '(' expression ')'
               | IDENTIFIER '=' expression ;
agg_func       = 'sum' | 'avg' | 'min' | 'max' | 'count' ;

VAR_BIND       = '?' IDENTIFIER ;


(* ── Meta-annotations ─────────────────────────────────────────── *)

meta_annotation = '~' meta_key meta_value ;
meta_key        = IDENTIFIER [ ':' IDENTIFIER ] ;    (* ns:key namespace *)
meta_value      = expression
                | expression '..' expression         (* temporal range *)
                | expression '/' DURATION_LITERAL    (* decay rate *)
                | '{' { meta_field } '}' ;           (* structured *)
meta_field      = IDENTIFIER '=' expression
                | IDENTIFIER ':' expression ;


(* ── Temporal ranges ──────────────────────────────────────────── *)
(*   DATETIME '..' DATETIME  |  DATETIME '..' '*'                  *)
(*   '*' '..' DATETIME       |  '*' '..' '*'                       *)
(*   (expressed via meta_value range; '*' = 'now')                 *)


(* ── Module system ────────────────────────────────────────────── *)

import_decl    = 'import' '{' IDENTIFIER { ',' IDENTIFIER } '}'
                 'from' STRING_LITERAL ;
export_decl    = 'export' ( node_decl | type_decl | context_decl
                          | intent_decl | process_decl ) ;


(* ── Expressions ──────────────────────────────────────────────── *)

expression     = literal
               | node_ref
               | VAR_BIND
               | access_expr
               | binary_expr
               | unary_expr
               | func_call
               | '(' expression ')'
               | array_literal
               | map_literal ;

access_expr    = expression '.' IDENTIFIER
               | expression '[' expression ']' ;

binary_expr    = expression binary_op expression ;
unary_expr     = unary_op expression ;

array_literal  = '[' [ expression { ',' expression } ] ']' ;
map_literal    = '#{' [ kv_pair { ',' kv_pair } ] '}' ;    (* note the '#' *)
kv_pair        = expression ':' expression ;

func_call      = IDENTIFIER '(' [ expression { ',' expression } ] ')' ;

binary_op      = '*' | '/' | '%'                          (* precedence 3 *)
               | '+' | '-'                                 (* precedence 4 *)
               | '..'                                      (* precedence 5 *)
               | '>' | '<' | '>=' | '<='                  (* precedence 6 *)
               | '==' | '!='                               (* precedence 7 *)
               | 'in' | 'overlaps' | 'within' | 'matches' (* precedence 8 *)
               | '&&' | 'and'                              (* precedence 9 *)
               | '||' | 'or' ;                             (* precedence 10 *)

unary_op       = 'not' | '-' ;


(* ── Node references ──────────────────────────────────────────── *)

node_ref       = '@' IDENTIFIER { '.' IDENTIFIER } ;


(* ── Literals (composite) ─────────────────────────────────────── *)

literal        = INT_LITERAL
               | FLOAT_LITERAL
               | DECIMAL_LITERAL
               | STRING_LITERAL
               | BOOL_LITERAL
               | NULL_LITERAL
               | DATETIME_LITERAL
               | DURATION_LITERAL
               | QUANTITY_LITERAL
               | MONEY_LITERAL
               | BYTES_LITERAL
               | VECTOR_LITERAL
               | UUID_LITERAL ;


(* ── Lexical rules ────────────────────────────────────────────── *)

(* Identifiers — §2.4 *)
IDENTIFIER     = LETTER { LETTER | DIGIT | '_' } ;
LETTER         = 'a'..'z' | 'A'..'Z' ;
DIGIT          = '0'..'9' ;
HEX_DIGIT      = DIGIT | 'a'..'f' | 'A'..'F' ;
BIN_DIGIT      = '0' | '1' ;

(* Integer literals — §2.8.1 *)
INT_LITERAL    = [ '-' ] DIGIT { DIGIT }
               | '0x' HEX_DIGIT { HEX_DIGIT }
               | '0b' BIN_DIGIT { BIN_DIGIT } ;

(* Float literals — §2.8.2 *)
FLOAT_LITERAL  = [ '-' ] DIGIT { DIGIT } '.' DIGIT { DIGIT } [ EXPONENT ] ;
EXPONENT       = ( 'e' | 'E' ) [ '+' | '-' ] DIGIT { DIGIT } ;

(* Decimal literals — §2.8.3 *)
DECIMAL_LITERAL = [ '-' ] DIGIT { DIGIT } '.' DIGIT { DIGIT } 'd' ;

(* String literals — §2.8.4 *)
STRING_LITERAL = '"' { STRING_CHAR | ESCAPE } '"'
               | '"""' { any Unicode char } '"""' ;
STRING_CHAR    = (* any Unicode char except '"' and '\' *) ;
ESCAPE         = '\' ( '"' | '\' | '/' | 'n' | 'r' | 't' | 'u' HEX4 ) ;
HEX4           = HEX_DIGIT HEX_DIGIT HEX_DIGIT HEX_DIGIT ;

(* Boolean & null — §2.8.5–2.8.6 *)
BOOL_LITERAL   = 'true' | 'false' ;
NULL_LITERAL   = 'null' ;

(* Duration literals — §2.8.7 *)
DURATION_LITERAL = DIGIT { DIGIT } DURATION_UNIT ;
DURATION_UNIT    = 'ns' | 'us' | 'ms' | 's' | 'm' | 'h' | 'd' | 'w'
                 | 'mo' | 'y' ;

(* Datetime literals — §2.8.8 *)
DATETIME_LITERAL = DATE [ 'T' TIME [ TIMEZONE ] ] ;
DATE             = YEAR '-' MONTH '-' DAY
                 | YEAR '-Q' QUARTER
                 | YEAR '-W' WEEK ;
TIME             = HOUR ':' MINUTE [ ':' SECOND [ '.' FRACTION ] ] ;
TIMEZONE         = 'Z' | ( '+' | '-' ) HOUR ':' MINUTE ;
YEAR             = DIGIT DIGIT DIGIT DIGIT ;
MONTH            = DIGIT DIGIT ;
DAY              = DIGIT DIGIT ;
QUARTER          = '1' | '2' | '3' | '4' ;

(* Quantity literals — §2.8.9 *)
QUANTITY_LITERAL = ( INT_LITERAL | FLOAT_LITERAL | DECIMAL_LITERAL )
                   [ ' ' ] unit_expr ;
unit_expr        = unit_atom { ( '*' | '/' | '^' INT_LITERAL ) unit_atom } ;
unit_atom        = SI_UNIT | IMPERIAL_UNIT | DATA_UNIT | IDENTIFIER ;
SI_UNIT          = '°C' | '°F' | 'K'
                 | 'm' | 'cm' | 'mm' | 'km'
                 | 'kg' | 'g' | 'mg'
                 | 's' | 'ms' | 'min' | 'hr'
                 | 'A' | 'V' | 'W' | 'Wh' | 'kWh' | 'J'
                 | 'Pa' | 'kPa' | 'bar'
                 | 'mol' | 'cd' | 'lm' | 'lx'
                 | 'Hz' | 'kHz' | 'MHz' | 'GHz' ;
IMPERIAL_UNIT    = 'ft' | 'in' | 'lb' ;
DATA_UNIT        = 'B' | 'KB' | 'MB' | 'GB' | 'TB'
                 | 'bps' | 'kbps' | 'Mbps' | 'Gbps' ;

(* Money literals — §2.8.10 *)
MONEY_LITERAL    = ( DECIMAL_LITERAL | INT_LITERAL ) [ ' ' ] ISO4217 ;
ISO4217          = LETTER LETTER LETTER ;        (* validated semantically *)

(* Bytes literals — §2.8.11 *)
BYTES_LITERAL    = 'b"' { BASE64_CHAR } '"' ;
BASE64_CHAR      = LETTER | DIGIT | '+' | '/' | '=' ;

(* Vector literals — §2.8.12 *)
VECTOR_LITERAL   = 'v[' FLOAT_LITERAL { ',' FLOAT_LITERAL } ']' ;

(* UUID literals — §3.1 *)
UUID_LITERAL     = 'u"' HEX_DIGIT { HEX_DIGIT | '-' } '"' ;

(* Comments — §2.3 *)
COMMENT          = LINE_COMMENT | BLOCK_COMMENT ;
LINE_COMMENT     = '//' { (* any char except newline *) } NEWLINE ;
BLOCK_COMMENT    = '/*' { (* any char, nesting allowed *) } '*/' ;
